# the-price-is-right-multiplayer

./: .dockerignore  .gitignore  ARCHITECTURE.md  DATABASE_CONNECTION_GUIDE.md  FRONTEND_INTEGRATION.md  HOST_IMPLEMENTATION.md  README.md  TESTING_GUIDE.md  check_db.py  docker-compose.yml  et --hard 050e660  et --hard 6eb5759  et --hard HEAD~1  rule.md  test_plan.sh  test_start_game.py
Backend/: .env  (+7 more)
Network/: CMakeLists.txt  Dockerfile  HOST_FEATURES_README.md  Makefile  health_check.py  network_server  test_server.py  test_suite.py
Network/client/: Makefile
Network/client/src/: client_main.c
Network/include/: message_handler.h  protocol.h
Network/include/handlers/: auth_guard.h  auth_handler.h  bonus_handler.h  dispatcher.h  end_game_handler.h  forfeit_handler.h  history_handler.h  invite_player_handler.h  match_manager.h  password_handler.h  presence_handler.h  presence_manager.h  profile_handler.h  room_disconnect_handler.h  room_handler.h  round1_handler.h  round1_test_setup.txt  round2_handler.h  social_handler.h  start_game_handler.h
Network/include/protocol/: opcode.h  protocol.h
Network/include/transport/: room_manager.h  server.h
Network/include/utils/: crypto.h  http_utils.h  json_utils.h
Network/protocol/: commands.h  packet_format.h  payloads.h
Network/server/: Dockerfile  Makefile
Network/server/include/: backend_bridge.h  packet_handler.h  router.h  session.h
Network/server/src/: backend_bridge.c  main.c  packet_handler.c  router.c  session.c  socket_server.c
Network/src/: client_manager.c  main.c  message_handler.c  room_manager.c
(+455 files in other folders)
